--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -1,5 +1,11 @@
 <ul>
   <% @bookmarks.each do |bookmark| %>
-    <li><%= bookmark %></li>
+    <li>
+      <a href="<%= bookmark.url %>" target="blank">
+        <%= bookmark.title %>
+      </a>
+    </li>
   <% end %>
 </ul>
+
+<a href="/bookmarks/new">Add bookmark</a>
