--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -1,7 +1,7 @@
 <%= flash[:error] %>
 <ul>
   <% @bookmarks.each do |bookmark| %>
-    <li class="bookmark">
+    <li class="bookmark" id="bookmark-<%= bookmark.id %>">
       <a href="<%= bookmark.url %>" target="blank">
         <%= bookmark.title %>
       </a>
@@ -28,7 +28,11 @@
       Tags:
       <ul>
         <% bookmark.tags.each do |tag| %>
-          <li><%= tag.content %></li>
+          <li>
+            <a href="/tags/<%= tag.id %>/bookmarks">
+              <%= tag.content %>
+            </a>
+          </li>
         <% end %>
       </ul>
       <form action="/bookmarks/<%= bookmark.id %>/tags/new">
