a signed in user can sign out

--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -1,8 +1,11 @@
 <% if @current_user %>
   <h1>Welcome to Bookmark Manager, <%= @current_user.email %></h1>
+  <form action="/sessions/destroy" method="post">
+    <input type="submit" value="Sign out">
+  </form>
 <% end %>
 
-<%= flash[:error] %>
+<%= flash[:notice] %>
 
 <ul>
   <% @bookmarks.each do |bookmark| %>
