refactor user registration and authentication

--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -3,6 +3,14 @@
   <form action="/sessions/destroy" method="post">
     <input type="submit" value="Sign out">
   </form>
+<% else %>
+  <h1>Welcome to Bookmark Manager</h1>
+  <form action="/users/new">
+    <input type="submit" value="Sign up">
+  </form>
+  <form action="/sessions/new">
+    <input type="submit" value="Sign in">
+  </form>
 <% end %>
 
 <%= flash[:notice] %>
