--- a/views/users/new.erb
+++ b/views/users/new.erb
@@ -11,5 +11,5 @@
     <input type="password" name="password">
   </label>
 
-  <input type="submit" value="Sign up">
+  <input type="submit" value="Submit">
 </form>
