--- a/app/views/bookmarks/edit.erb
+++ b/app/views/bookmarks/edit.erb
@@ -4,12 +4,12 @@
   <input type="hidden" name="_method" value="patch">
   <label for="title">
     Title
-    <input type="text" name="title" value="<%= @bookmark.title %>" >
+    <input type="text" name="title" value="<%= @bookmark.title %>" required >
   </label>
 
   <label for="url">
     URL
-    <input type="text" name="url" value="<%= @bookmark.url %>">
+    <input type="text" name="url" value="<%= @bookmark.url %>" required>
   </label>
 
   <input type="submit" value="Update bookmark">
