--- a/app/views/bookmarks/new.erb
+++ b/app/views/bookmarks/new.erb
@@ -3,7 +3,7 @@
 <form action="/bookmarks" method="post">
   <label for="title">
     Title
-    <input type="text" name="title" >
+    <input type="text" name="title" required>
   </label>
 
   <label for="url">
