--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -3,12 +3,12 @@
 <form action="/users" method="post">
   <label for="email">
     Email
-    <input type="email" name="email">
+    <input type="email" name="email" required>
   </label>
 
   <label for="password">
     Password
-    <input type="password" name="password">
+    <input type="password" name="password" required>
   </label>
 
   <input type="submit" value="Submit">
