--- a/app/views/bookmarks/new.erb
+++ b/app/views/bookmarks/new.erb
@@ -11,5 +11,5 @@
     <input type="text" name="url" >
   </label>
 
-  <input type="submit" value="Add bookmark">
+  <input type="submit" value="Submit">
 </form>
