--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -3,8 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Bookmark Manager</title>
+    <link rel="stylesheet" href="/css/application.css">
   </head>
   <body>
+    <div class="header">
+      <h1>Bookmark Manager</h1>
+    </div>
     <%= partial :flash_messages %>
     <%= yield %>
   </body>
