a user can delete bookmarks with comments and or tags

--- a/app/views/bookmarks/index.erb
+++ b/app/views/bookmarks/index.erb
@@ -34,7 +34,7 @@
           <%= bookmark.title %>
         </a>
 
-        <form class="delete" ction="/bookmarks/<%= bookmark.id %>" method="post">
+        <form class="delete" action="/bookmarks/<%= bookmark.id %>" method="post">
           <input type="hidden" name="_method" value="delete">
           <input type="submit" value="Delete">
         </form>
